--- a/Design 03/css/style.css
+++ b/Design 03/css/style.css
@@ -128,11 +128,65 @@ nav div {
 
 }
 
+.semiFooter{
+    margin: 60px;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(3,150px);
+    grid-row-gap: 20px;
 
+}
+.semiFooter  div {
+
+    text-align: justify;
+
+  
+
+}
+
+.s1 { 
+    grid-column: 1/7;
+}
+.s2 {
+    grid-column: 8/13;
+    grid-row:  1/3;
+    overflow: scroll;
+}
+.s3 {
+    grid-column: 1/7;
+}
+.s4 { grid-column: 1 / 7;
+ }
+ .s5 {
+    grid-column: 8/13;
+ }
+ .s5 section {
+     display: grid;
+     grid-template-columns: repeat(8,1fr);
+     grid-gap: 10px;
+     
+ }
+ .s5 img {
+     width: 100%;
+     
+ }
+
+ footer {
+     height: 50%;
+ }
 
 
 
  @media screen and (max-width:760px){
+     .s5 section {
+        
+        display: flex;
+
+        
+     }
+     .s5 img {
+         padding: 20px;
+     }
     body {
         position: relative;
         overflow: hidden;
@@ -198,6 +252,23 @@ nav div {
         grid-template-rows:repeat(3, 200px);
    
     }
+    .s2{
+        display: none;
+        
+    }
+   
+    .semiFooter div {
+        grid-column: 1/-1;
+
+    
+
+    }
+    .semiFooter {
+      
+      margin:10px;
+      
+    }
+
 
 }
 
@@ -226,7 +297,19 @@ nav div {
         text-align: justify;
         padding: 0;
     }
+    .semiFooter {
+        grid-template-rows: 200px;
+    }
 
  
 
+ }
+
+ @media screen and (max-width: 890px) {
+    .semiFooter {
+        grid-template-rows: 180px;
+    }
+    .s2 {
+        height: 360px;
+    }
  }
