--- a/Design 03/css/style.css
+++ b/Design 03/css/style.css
@@ -214,26 +214,26 @@ nav div {
         position: absolute;
         right: 0;
         top: 100px;
-        height: 500px;
-        width: 50%;
+        height: 300px;
+        width: 100%;
         display: flex;
         flex-direction: column;
-        border-top-left-radius: 10px;
-        border-bottom-left-radius: 10px;
         transform: translateX( 100%);
         transition: transform  1s ease-in-out;
-    
         font-weight: 400;
         text-align: left;
         justify-content: center;
         text-align: center;
         z-index: 9999;
-   
+     
        
     }
      nav ul li {
          padding: 10px;
          color:white;
+         opacity: 0;
+         transition: all 1s ease;
+
         
 
      }
@@ -253,8 +253,12 @@ nav div {
      .nav-active{
         transform: translateX(0%);
         z-index: 9999;
-
-
+   
+     }
+     .op1 {
+        opacity: 1;
+        transition: all 1s ease;
+    
      }
 
      main{
@@ -312,6 +316,11 @@ nav div {
     }
     .s3 {
         margin-top: 20px;
+    }
+    nav ul li {
+        border-top: 1px solid wheat;
+        
+
     }
 
  
