--- a/Design 04/css/style.css
+++ b/Design 04/css/style.css
@@ -3,6 +3,9 @@
     margin: 0px;
     box-sizing: border-box;
 }
+body{
+    margin: 0 30px;
+}
 
 
 ul {
@@ -14,20 +17,203 @@ ul a {
 }
 
                                             /* HEADER */
+                                            
 header {
     display: grid;
     grid-template-columns: repeat(2,1fr);
+    grid-template-rows: 150px;
+
+}
+
+header img {
+    margin: auto;
+    height: 100%;
 }
 header nav {
 
     display: grid;
-
     align-content: center;
-
 
 }
 
 header nav ul li {
     display: inline-block;
-    padding: 0 20px;
+    padding: 20px 20px;
 }
+
+main {
+    display: grid;
+    margin: 30px 0;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(4,150px);
+    grid-gap: 10px;
+}
+main div {
+    border: 1px solid black;
+
+
+}
+
+/* ///////////////////////////////////// MAIN GRID  */
+
+#one {
+    grid-column: 2 / 5;
+    grid-row: 1 / -1;
+}
+#two {
+    grid-column: 5 / 7;
+    grid-row: 1 / 3;
+}
+#three{
+    grid-column: 7 / -1;
+}
+#four {
+    grid-column: 7 / -1;
+}
+#five {
+    grid-column: 5 / 7;
+}
+#six {
+    grid-column: 7 / -1;
+    grid-row: 3 / -1;
+
+}
+#seven {
+    grid-column: 5 / 7
+}
+
+
+/* //////////////////////////////////////// MAIN GRID END */
+
+/* ////////////////////////////////  768 pixel */
+@media screen and (max-width: 768px){
+
+    
+
+header {
+    grid-template-columns: 1fr;
+}
+header nav ul {
+    text-align: center;
+
+}
+
+body {
+    margin: 0px;
+}
+main { margin: 30px;}
+
+
+
+}
+
+
+/* ////////////////////////////////  768 pixel END */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* ///////////////////////////////////// MAIN GRID 768px  */
+@media screen and (max-width: 768px){
+
+    main {
+       
+        grid-template-rows: repeat(7,150px);
+    
+        
+    }
+
+    #one {
+        grid-column: 1 / 7;
+        grid-row: 1 / 4;
+    }
+    #two {
+        grid-column: 7 / -1;
+        grid-row: 1 / 3;
+    }
+    #three{
+        grid-column: 1 / -1;
+    }
+    #four {
+        grid-column: 1 / -1;
+    }
+    #five {
+        grid-column: 1 / -1;
+    }
+    #six {
+        
+        grid-row: 3 / 4;
+    
+    }
+    #seven {
+        grid-column: 1 / -1;
+    }
+    
+
+
+/* //////////////////////////////////////// MAIN GRID END */
+
+
+}
+
+/* ///////////////////////////////////// MAIN GRID 360px  */
+@media screen and (max-width: 360px){
+
+    main {
+       
+        grid-template-rows: repeat(7,150px);
+    
+        
+    }
+
+    #one {
+        grid-column: 1 / -1;
+        grid-row: 1 / 1;
+    }
+    #two {
+
+        grid-column: 1 /-1;
+        grid-row: 2/2;
+    }
+    #three{
+        grid-column: 1 / -1;
+    }
+    #four {
+        grid-column: 1 / -1;
+    }
+    #five {
+        grid-column: 1 / -1;
+    }
+    #six {
+        
+        grid-column: 1 /-1;
+    
+    }
+    #seven {
+        grid-column: 1 / -1;
+    }
+    
+
+
+/* //////////////////////////////////////// MAIN GRID END */
+
+
+}
+
