--- a/Design 04/css/style.css
+++ b/Design 04/css/style.css
@@ -86,6 +86,7 @@ main div {
 /* //////////////////////////////////////// MAIN GRID END */
 
 
+
 #one {
     padding: 10px;
 }
@@ -121,13 +122,45 @@ main div {
 #three {
     background-image: url("../img/m2.png");
     background-position: right;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: #fff;
+    position: relative;
+}
+#three  span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    text-align: center;
+}
+#three a  {
+    color: #fff;
+    text-decoration: none;
+    border: 1px solid #fff;
+    padding: 5px 10px;
+    display: block;
+    
+}
+
+#four {
+    display: grid;
+    grid-template-columns: repeat( 6 , 150px);
+    grid-gap: 5px;
+    overflow: scroll;
+    align-items: center;
+}
+#four img {
+    height: 80%;
 }
 
 
 /* ////////////////////////////////  768 pixel */
 @media screen and (max-width: 768px){
 
-    
+    #one {
+        overflow: scroll;
+    }   
 
 header {
     grid-template-columns: 1fr;
