--- a/Design 04/css/style.css
+++ b/Design 04/css/style.css
@@ -100,24 +100,25 @@ main div {
 }
 #two {
   position: relative;
-
   align-self: center;
+  text-align: center;
+
 }
 #two img {
-    width:100%;
 
     
 }
 #two span {
-    position: absolute;
-    top:50%;
-    left:50%;
-    transform: translate(-50% , -50%);
-    width: 100%;
-    color:#fff;
-    font-size: 12px;
-    background-color: rgba(0,0,0,0.7);
-    padding: 5px;
+    
+}
+#two a {
+    display: block;
+    padding: 3px 5px;
+    color: Black;
+    text-decoration: none;
+    text-decoration: none;
+    border: 1px solid black;
+    
 }
 #three {
     background-image: url("../img/m2.png");
@@ -153,6 +154,47 @@ main div {
 #four img {
     height: 80%;
 }
+#five {
+    text-align: center;
+    align-self: center;
+}
+#five img {
+    width : 40px;
+
+}
+#five section {
+
+    padding: 10px;
+}
+
+#six {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-gap: 20px;
+
+    
+    
+}
+#six h6 {
+    margin-bottom: 10px;
+}
+#six div {
+    padding: 10px;
+}
+.centerMe {
+    text-align: center;
+}
+textarea {
+   resize: none;
+}
+.btn {
+    color:black;
+    text-decoration: none;
+    padding: 3px 5px;
+    border: 1px solid black;
+    display: inline-block;
+    margin: 10px 0;
+}
 
 
 /* ////////////////////////////////  768 pixel */
@@ -178,12 +220,20 @@ main {
 }
 
 #two img {
-    height: 100%;
+    
     width: 70%;
 }
 #two {
     text-align: center;
   
+}
+
+.delete{
+    display: none;
+}
+#six {
+    display: none;
+
 }
 
 
@@ -200,6 +250,12 @@ main {
 
     #one {
         overflow: scroll;
+    }
+    #two img {
+     height: 70%;
+    }
+    .delet {
+     display: none;
     }
 
 }
@@ -240,7 +296,7 @@ main {
     }
     #two {
         grid-column: 7 / -1;
-        grid-row: 1 / 3;
+        grid-row: 1 / 4;
     }
     #three{
         grid-column: 1 / -1;
@@ -272,7 +328,8 @@ main {
 
     main {
        
-        grid-template-rows: repeat(7,150px);
+        grid-template-rows: repeat(7,200px);
+        
     
         
     }
