--- a/Design 04/css/style.css
+++ b/Design 04/css/style.css
@@ -196,6 +196,11 @@ textarea {
     margin: 10px 0;
 }
 
+footer {
+    padding: 50px;
+    text-align: center;
+}
+
 
 /* ////////////////////////////////  768 pixel */
 @media screen and (max-width: 768px){
@@ -256,6 +261,11 @@ main {
     }
     .delet {
      display: none;
+    }
+
+    footer {
+        padding-top: 0;
+        margin-top: 0;
     }
 
 }
@@ -328,7 +338,7 @@ main {
 
     main {
        
-        grid-template-rows: repeat(7,200px);
+        grid-template-rows: repeat(6,200px);
         
     
         
