--- a/Design 06/css/style.css
+++ b/Design 06/css/style.css
@@ -17,6 +17,7 @@ body {
     background-position: center;
     background-size: cover;
     padding: 0 50px;
+    position: relative;
 }
 .loc {
     padding: 5px;
@@ -25,7 +26,7 @@ body {
     color: white;
     border:none;
     border-bottom: 1px solid white;
-    width: 80%;
+    width: 90%;
  }
  .loc:focus{
     outline: none;
@@ -36,11 +37,12 @@ body {
 
  header {
     display: grid;
-    grid-template-columns: 300px 1fr 350px;
+   
     justify-content: center;
     text-align: center;
     align-items: center;
     grid-gap: 10px;
+    margin: 20px;
  }
   ul li {
       display: inline-block;
@@ -49,6 +51,30 @@ body {
 
   header img {
      width: 200;
-     margin: auto;
-     
+     margin: auto;   
+  } 
+
+  h1 {
+      font-size: 50px;
+      font-family: Arial, Helvetica, sans-serif;
+  }
+  section a {
+      display: inline-block;
+      padding: 3px 5px;
+      border: 1px solid white;
+      text-decoration: none;
+    
+  }
+  section {
+      text-align: center;
+    position: absolute;
+    top: 50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+  }
+
+  @media screen and (max-width: 460px){
+      ul li {
+          width: 100%;
+      }
   }
